# IBM-mcp-context-forge

./: .bumpversion.cfg  .dockerignore  .env.example  .gitignore  .grype.yaml  .pre-commit-config.yaml  .pre-commit-lite.yaml  .secrets.baseline  .yamllint  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Containerfile  Containerfile.lite  Containerfile.scratch  MANIFEST.in  Makefile  README.md  SECURITY.md  deny.toml  docker-compose-debug.yml  docker-compose-performance.yml  docker-compose-verbose-logging.yml  docker-compose.yml  docker-entrypoint.sh  gunicorn.config.py  package-lock.json  package.json  pyproject.toml
.github/: CODEOWNERS
.github/scripts/: secret_baseline_ci_decision.py
.github/workflows/: docker-multiplatform.yml  docker-required.yml  docker-scan-required.yml  docker-scan.yml  linting-full.yml  linting-required.yml  notify-slack-failure.yml  playwright-smoke.yml  playwright.yml  pre-commit.yml  pytest.yml  python-package.yml  rust.yml  sql-sanitizer.yml  vitest.yml
a2a-agents/: README.md
a2a-agents/rust/a2a-echo-agent/: Cargo.toml  Dockerfile  Makefile  README.md
a2a-agents/rust/a2a-echo-agent/src/: main.rs
charts/mcp-stack/: Chart.yaml  values.yaml
crates/a2a_runtime/: Cargo.toml
crates/mcp_runtime/: Cargo.toml  DEVELOPING.md  README.md  STATUS.md  TESTING-DESIGN.md
crates/request_logging_masking_native_extension/: Cargo.toml
crates/request_logging_masking_native_extension/src/: lib.rs
docs/docs/: .pages  deprecations.md
docs/testing/: manual-test-uaid-cross-gateway-auth.md
infra/keycloak/: realm-export.json
infra/s390x/: Containerfile
infra/wheels/: Containerfile  Containerfile.dockerignore
llms/: mcp-server-go.md
mcp-servers/: AGENTS.md  README.md
mcp-servers/rust/benchmark-server/: Cargo.toml  Containerfile  Dockerfile  Makefile  README.md
mcp-servers/rust/benchmark-server/src/: main.rs
mcp-servers/rust/fast-time-server/: Cargo.toml
mcp-servers/rust/filesystem-server/: Cargo.toml
mcp-servers/rust/filesystem-server/src/tools/: write.rs
mcp-servers/rust/slow-time-server/: Cargo.toml  Containerfile  Makefile  README.md
mcp-servers/rust/slow-time-server/src/: main.rs
mcpgateway/: __init__.py  __main__.py  _security_constants.py  admin.py  auth.py  auth_context.py  bootstrap_db.py  config.py  db.py  deprecations.py  main.py  observability.py  schemas.py  sri_hashes.json
mcpgateway/admin_ui/: alpine-setup.js  eventDelegation.js  events.js  formSubmitHandlers.js  tabs.js  utils.js
mcpgateway/cache/: auth_cache.py
mcpgateway/common/: query_params.py  validators.py
mcpgateway/instrumentation/: sqlalchemy.py
mcpgateway/middleware/: auth_middleware.py  csrf_middleware.py  forwarded_host.py  header_size_middleware.py  rate_limit_middleware.py  rbac.py  security_headers.py  validation_middleware.py
mcpgateway/plugins/: metadata.py
mcpgateway/routers/: a2a_agent_plugin_bindings.py  auth.py  compliance_router.py  email_auth.py  oauth_router.py  observability.py  rbac.py  siem.py  tokens.py  tool_plugin_bindings.py
mcpgateway/services/: a2a_agent_plugin_binding_service.py  a2a_service.py  argon2_service.py  audit_trail_service.py  cancellation_service.py  catalog_service.py  completion_service.py  compliance_service.py  content_security.py  csrf_service.py  dataplane_publisher.py  dcr_service.py  elicitation_service.py  email_auth_service.py  event_service.py  export_service.py  gateway_service.py  grpc_service.py  import_service.py  llm_provider_service.py  llm_proxy_service.py  log_aggregator.py  logging_service.py  mcp_client_chat_service.py  metrics.py  metrics_buffer_service.py  metrics_cleanup_service.py  metrics_rollup_service.py  oauth_manager.py  observability_service.py  password_policy_service.py  performance_service.py  (+24 more)
plugins/: config.yaml
scripts/: cdn_resources.py  download-cdn-assets.sh  fedramp-validate.sh
supply-chain/: audits.toml  config.toml
tests/: AGENTS.md
(+234 files in other folders)
