[package]
name = "a2a-echo-agent"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Rust A2A echo agent for ContextForge testing"
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[lints]
workspace = true
