[package]
name = "fast-time-server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Ultra-fast MCP test server with echo and time tools"
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
# Async runtime
tokio.workspace = true

# Web framework
axum.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Random number generation (normal distribution for delay jitter)
rand = "0.10.1"
rand_distr = "0.6.0"

# Error handling
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Time handling
chrono.workspace = true
chrono-tz.workspace = true
uuid.workspace = true

[lints]
workspace = true
