[package]
name = "filesystem-server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors = ["Matheus Cafalchio"]
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
clap.workspace = true
futures.workspace = true
globset = "0.4.18"
ignore = "0.4.25"
rmcp = { workspace = true, features = [
    "base64",
    "macros",
    "server",
    "transport-streamable-http-server",
] }
serde.workspace = true
serde_json.workspace = true
similar = "2.7.0"
tempfile = "3"
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[lints]
workspace = true
